Updated Staff.md with new contents.